# portrait

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
docs/: acknowledgement.md  api.rst  conf.py  coverage.ipynb  index.md  installation.md  periodmatch.ipynb  tess.ipynb
docs/ipynb/: coverage.ipynb
paper/: paper.bib  paper.md
portrait/: __init__.py  core.py
tests/: test_all.py
