[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portrait"
version = "0.0.2-beta"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "Lionel Garcia" }]
description = "Compute and visualize observations phase coverage"
readme = "README.md"
keywords = ["jax", "astronomy", "image processing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]
dependencies = ["numpy>=1.23.5", "jax>=0.2.25", "jaxlib"]

[project.optional-dependencies]
dev = ["black", "isort", "pytest"]
docs = [
  "sphinx",
  "docutils",
  "jupyterlab",
  "myst-parser",
  "twine",
  "sphinx-book-theme",
  "black",
  "myst-nb",
  "sphinx-copybutton",
  "matplotlib",
  "lightkurve",
]
